--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="[А-Я]{1}[а-я]+([\-/]?[А-Я]{1}?[а-я]+?)?" minlength="2" maxlength="20" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="name" pattern="" placeholder="E-Mail" />
+                        <input class="form__input" type="email" name="name" pattern="^([a-z0-9_\-]+)@([a-z0-9_\-]+)\.([a-z]{2,6})$" placeholder="E-Mail" />
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="name" placeholder="Телефон" pattern="" minlength="" maxlength="" />
+                        <input class="form__input" type="tel" name="name" placeholder="Телефон" pattern="^(\+?[7|8]{1}(\s?\(?)\d{3}(\)?\s?[\-]?)\d{3}[\-]?\d{2}[\-]?\d{2})$" minlength="" maxlength="" />
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="name" pattern="" placeholder="Ваш сайт" />
+                        <input class="form__input" type="text" name="name" pattern="(https?:\/\/)(([1-2][1-5]?[1-5]?\.[1-2][1-5]?[1-5]?\.[1-2][1-5]?[1-5]?\.[1-2][1-5]?[1-5]?)|(www\.)?([a-z]+\.[a-z]{1,3}\/?[a-zA-Z0-9\/#]+))" placeholder="Ваш сайт"/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
@@ -41,3 +41,5 @@
     </main>     
 </body>
 </html>
+
+<!--Уважаемый у меня проблема с этими регулярками и с Гитом-->
