--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="^((https?:\/\/(www.)?)(([1-2][0-5]?[0-5]?\.[1-2][0-5]?[0-5]?\.[1-2][0-5]?[0-5]?\.[1-2][0-5]?[0-5]?)|([a-z]+\.([a-z\.]+)?[a-z]{2,7}))((:[0-9]{1,5})?([a-zA-Z0-9\/#]+)?))$" placeholder="Ваш сайт"/>
+                        <input class="form__input" type="url" name="name" pattern="^((https?:\/\/(www.)?)(([1-2][0-5]?[0-5]?\.[1-2][0-5]?[0-5]?\.[1-2][0-5]?[0-5]?\.[1-2][0-5]?[0-5]?)|([a-z\-]+\.([a-z\.]+)?[a-z]{2,7}))((:[0-9]{1,5})?([a-zA-Z0-9\/#]+)?))$" placeholder="Ваш сайт"/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
